# pytyped-curry

./: LICENSE  README.md  pyproject.toml  setup.py  test.py
pytyped_curry/: _curry_3_11.py  _curry_3_7.py  _curry_3_8.py  _doc.py
src/pytyped_curry/: __init__.py  _curry.py  _curry_3_11.py  _curry_3_7.py  _curry_3_8.py  _decorator.py  _doc.py
